--- a/style.css
+++ b/style.css
@@ -508,3 +508,35 @@ header .btn {
         width: 120px;
     }
 }
+
+@media (min-width: 340px) and (max-width: 430px) {
+    .nav-pane {
+        padding: 5px;
+    }
+
+    .signup-button {
+        font-size: 14px;
+        padding: 8px 16px;
+    }
+
+    .email-input {
+        font-size: 14px;
+    }
+
+    .get-started-btn {
+        font-size: 14px;
+    }
+
+    .x1cd2 {
+        transform: scale(0.8);
+    }
+
+    .netflix-screen {
+        height: 35vh;
+        width: 75vw;
+    }
+
+    .logo {
+        width: 100px;
+    }
+}
